# syntaxes

./: .gitignore  LICENSE  README.md  add_kit.py  categorise_plasmids.py  css_colors.py  model.py  pyproject.toml  test_model.py  update_plasmids.py
addgene_plasmids/: 101682.gb  101683.gb  101684.gb  101685.gb  101686.gb  101687.gb  101688.gb  101689.gb  101690.gb  101691.gb  101692.gb  101693.gb  101694.gb  101695.gb  101696.gb  101697.gb  101698.gb  101699.gb  101700.gb  101701.gb  101702.gb  101703.gb  101704.gb  101705.gb  101706.gb  101708.gb  101709.gb  101710.gb  101712.gb  105336.gb  105337.gb  105338.gb  105339.gb  105340.gb  105341.gb  105342.gb  105343.gb  105344.gb  105345.gb  105346.gb  (+772 more)
kits/caro-bernat-yeast-goldenbraid-cloning/: info.json  plasmids.tsv
kits/gasser-goldenpics/: info.json  plasmids.tsv
kits/heap-start-stop-assembly/: info.json  plasmids.tsv
kits/marillonnet-moclo/: info.json  plasmids.tsv
kits/marillonnet-stuttmann-zcas9i-cloning/: info.json  plasmids.tsv
kits/moclo-ytk/: info.json  plasmids.tsv
kits/nekrasov-moclo-plant-crispr/: info.json  plasmids.tsv  plasmids.xlsx
kits/orzaez-goldenbraid2/: info.json  plasmids.tsv
kits/patron-moclo/: info.json  plasmids.tsv  plasmids.xlsx  readme.md
kits/pluskal-pombox/: info.json  (+1 more)
plasmids/: 65108.gb  65111.gb  65112.gb  65123.gb  65124.gb  65131.gb  65133.gb  65134.gb  65136.gb  65141.gb  65152.gb  65155.gb  65161.gb  65168.gb  65169.gb  65178.gb  65179.gb  65181.gb  65186.gb  65189.gb  65191.gb  65194.gb  65197.gb  65200.gb  65201.gb
syntaxes/: index.json  index.min.json
(+396 files in other folders)
